Home work 3: FlexBox - 1.Navigation
	change paddings and margins for mobile screen size

	files changed:
		css/navigation.css
		navigation.html

--- a/css/navigation.css
+++ b/css/navigation.css
@@ -16,7 +16,7 @@
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        padding: 20px;
+        padding: 10px 20px;
     }
 
     nav h1.name {
@@ -24,7 +24,7 @@
     }
 
     nav div {
-        margin: 10px 0;
+        margin: 5px 0;
     }
 
     nav div .menuGroup {
@@ -55,15 +55,23 @@
         color: #262626;
     }
 
-    nav button {
-        background-color: #262626;
-        min-width: 100px;
-        min-height: 30px;
-        color: white;
-        border: 2px solid white;
+    /*nav button {*/
+    /*    background-color: #262626;*/
+    /*    min-width: 100px;*/
+    /*    min-height: 30px;*/
+    /*    color: white;*/
+    /*    border: 2px solid white;*/
+    /*    border-radius: 5px;*/
+    /*    font-weight: bold;*/
+    /*    padding: 10px 15px;*/
+    /*}*/
+
+    .btnLink{
+        text-decoration: none;
+        padding: 5px 15px;
+        border: 1px solid white;
         border-radius: 5px;
-        font-weight: bold;
-        padding: 10px 15px;
+        color: white;
     }
 }
 
